# barbecue

./: .gitignore  .gitmodules  CMakeLists.txt  barbecue.c  calib.py
boards/: barbecue10.h
hw/barbecue/: Barbecue.kicad_sym  barbecue.kicad_pcb  barbecue.kicad_prl  barbecue.kicad_pro  barbecue.kicad_sch  fp-lib-table  sym-lib-table
hw/barbecue/Barbecue.pretty/: EN11-HSM1AF15.kicad_mod  ILI9225-MOD.kicad_mod  TPS54331DR.kicad_mod  ToolingHole.kicad_mod  USB_Micro-AB_Molex_47590-0001.kicad_mod
hw/barbecue/components/: 47590-0001.stp  TPS54331DR.kicad_mod  TPS54331DR.lib
src/: CMakeLists.txt  ili9225.c  ili9225.h  main.c  renc.c  renc.h  scene.c  scene.h  st7735.c  st7735.h  task.c  task.h  task_hooks.h  tft.h
src/boards/: barbecue10.h  barbecue11.h
